# argonone

./: .envrc  .gitignore  argononed.py  argononed.toml  argononed_poweroff.py  colorzero.nix  default.nix  gpiozero.nix  module.nix  setup.cfg  shell.nix
nix/: sources.json
