[metadata]
name = argonone
version = file: ./version.txt
description = Software support for the ArgonOne Raspberry Pi 4 case
long_description = file: README.md, LICENSE
license_file = LICENSE

[options]
install_requires =
    click
    gpiozero
    smbus2
    toml
scripts =
    argononed.py
    argononed_poweroff.py
